--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.1",
+    "axios": "^1.6.8",
+    "lodash.debounce": "^4.0.8",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
